[package]
name = "graph-view"
version = "0.1.11"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12", default-features = false, features = [
    "bevy_pbr",
    "multi-threaded",
    "webgl2",
    "tonemapping_luts",
] }
bevy-inspector-egui="0.21"
bevy_window="0.12"
bevy_egui="0.23"
rand="*"
bevy_panorbit_camera = { version="0.9", features=["bevy_egui"] }
bevy_easings = "0.12.2"

[profile.release]
lto = true
codegen-units = 1


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 2

[profile.release.package."bevy-inspector-egui"]
opt-level = 1

[profile.dev.package."bevy-inspector-egui"]
opt-level = 1
